Fix code smells part 2
Signed-off-by: Lilian Houdelet <lhoudelet@oxyl.fr>